namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: web-apps
  namespace: web-apps
  labels:
    name: web-apps
