service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qcon-service
spec:
  ports:
  - name: "port-8000"
    port: 8000
    targetPort: 8000
  selector:
    app: qcon
  type: NodePort
status: {}
